--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "exceljs": "^4.4.0",
-    "next": "15.5.4",
-    "react": "19.1.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
     "react-dom": "19.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
